[gd_scene load_steps=11 format=3 uid="uid://buuvq1yfof8t6"]

[ext_resource type="Texture2D" uid="uid://85y3sk7mfyrf" path="res://enemies/plant_enemy.png" id="1_7e475"]
[ext_resource type="Script" path="res://enemies/plant_enemy.gd" id="1_arm7d"]
[ext_resource type="PackedScene" uid="uid://plggtvx4mjxh" path="res://collisions/hurtbox.tscn" id="2_y7t0g"]
[ext_resource type="PackedScene" uid="uid://da1nism87m0p1" path="res://collisions/hitbox.tscn" id="4_inks0"]
[ext_resource type="PackedScene" uid="uid://dschnqabx06ei" path="res://stats.tscn" id="5_t5m2c"]

[sub_resource type="Animation" id="Animation_yqqgo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_vsro8"]
resource_name = "attack"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.6),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"fire_bullet"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yir5c"]
_data = {
"RESET": SubResource("Animation_yqqgo"),
"attack": SubResource("Animation_vsro8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_op1hp"]
size = Vector2(15, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tfys3"]
size = Vector2(18, 13)

[node name="PlantEnemy" type="Node2D"]
script = ExtResource("1_arm7d")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1_7e475")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "attack"
libraries = {
"": SubResource("AnimationLibrary_yir5c")
}

[node name="BulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(0, -9)

[node name="FireDirection" type="Marker2D" parent="."]
position = Vector2(0, -17)

[node name="Hurtbox" parent="." instance=ExtResource("2_y7t0g")]
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-0.5, -7)
shape = SubResource("RectangleShape2D_op1hp")

[node name="Hitbox" parent="." instance=ExtResource("4_inks0")]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_tfys3")

[node name="Stats" parent="." instance=ExtResource("5_t5m2c")]

[connection signal="hurt" from="Hurtbox" to="." method="_on_hurtbox_hurt"]
[connection signal="no_health" from="Stats" to="." method="_on_stats_no_health"]
